--- a/angular/componenti/src/app/app.component.html
+++ b/angular/componenti/src/app/app.component.html
@@ -65,3 +65,10 @@
     </div>
   </div>
 </section>
+
+<ul>
+  <li *ngFor="let p of prodotti">
+    {{ p.quantita + ' x ' + p.nome }}
+  </li>
+</ul>
+
