--- a/angular/shopping-cart/src/app/product-list/product-list.component.html
+++ b/angular/shopping-cart/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <h2>Products</h2>
 
-<div *ngFor="let product of products">
+<div *ngFor="let product of _products">
 
   <h3>
     <a [title]="product.name + ' details'">
@@ -17,7 +17,8 @@
   </button>
 
   <app-product-alerts
-  [product]="product">
-  </app-product-alerts>
+  [productPassato]="product"> <!-- il "product" viene passato a "productPassato" -->
+  </app-product-alerts> <!-- e' un property binding, da template padre a template figlio -->
+                        <!-- productPassato potra' quindi essere usato nel template figlio -->
 
 </div>
