--- a/angular/shopping-cart/src/app/app.component.html
+++ b/angular/shopping-cart/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-top-bar></app-top-bar>
 <app-product-list></app-product-list>
-<div class="container">
+<!-- <div class="container">
   <router-outlet></router-outlet>
-</div>
+</div> -->
