pass data to parent component

--- a/angular/shopping-cart/src/app/product-alerts/product-alerts.component.html
+++ b/angular/shopping-cart/src/app/product-alerts/product-alerts.component.html
@@ -1,3 +1,4 @@
-<p *ngIf="productPassato && productPassato.price > 700"> <!-- vede productPassato (dal for product of _products) -->
-  <button type="button">Notify Me</button> <!-- nel template di product-list -->
+<p *ngIf="productPassato && productPassato.price > 700">
+<!-- vede productPassato (dal for product of _products) -->
+  <button type="button" (click)="notify.emit()">Notify Me</button><!-- nel template di product-list -->
 </p>
